changed background to avoid tiling/stretching issues

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -24,7 +24,7 @@
 }
 
 body {
-  background: url("../assets/paperbg.jpg")
+  background: #ebd5b3 url("../assets/paperbg.jpg")
 }
 
 @keyframes App-logo-spin {
